<resources>
    <string name="app_name">WeddingPokemonHunt</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="main_title_cd">Pokemon Title</string>
    <string name="main_characters_cd">Pokemon Title Characters</string>
    <string name="main_mulverna_title">MULVERNA WEDDING</string>
    <string name="main_hunt_title">HUNT</string>
    <string name="main_button_new_text">NEW</string>
    <string name="main_button_resume_text">RESUME</string>

    <!-- NEW USER -->
    <string name="new_user_title">NEW USER!</string>
    <string name="new_user_description">Welcome to the wonderful world of Pokemon.</string>
    <string name="new_user_instructions">Type your name and click "GOTTA CATCHEM ALL".</string>
    <string name="new_user_start_button_content_description">GOTTA CATCHEM ALL</string>
    <string name="new_user_name_input_hint">Enter First Name</string>
    <string name="new_user_input_error">Error: User name already selected.</string>
    <string name="new_user_home_button_description">Go to home screen.</string>

    <!-- RESUME USER -->
    <string name="resume_user_home_button_description">Go to home screen.</string>
    <string name="resume_user_title">RESUME USER</string>
    <string name="resume_user_instruction">SCROLL DOWN AND CLICK YOUR NAME TO ENTER POKEMON</string>

    <!-- POKEMON LIST -->
    <string name="unknown_pokemon">"?????"</string>
    <string name="list_item_1">Pokemon 1</string>
    <string name="list_item_2">Pokemon 2</string>
    <string name="list_item_3">Pokemon 3</string>
    <string name="list_item_4">Pokemon 4</string>
    <string name="list_item_5">Pokemon 5</string>

    <!-- POKEDEX -->
    <string name="default_user_name">USERNAME</string>
    <string name="default_pokemon_score">0</string>
    <string name="total_pokemon_score">/150</string>
    <string name="total_pokemon_wedding_score">/25</string>
    <string name="pokedex_header">POKEDEX</string>
    <string name="pokedex_catch_pokemon">Catch Pokemon Button</string>
    <string name="pokedex_home_button_description">Go to home screen.</string>

    <!--- User -->
    <string name="user_default_score">0</string>
    <string name="user_default_total">/150</string>
    <string name="user_default_wedding_total">/25</string>
    <string name="user_default_name">POKEMON</string>
    <string name="user_complete_text">WINNNER! - 25</string>

    <!--- Catch Pokemon -->
    <string name="catch_pokemon_header">CATCH POKEMON</string>
    <string name="catch_pokemon_instructions">Enter the 5 digit code to catch the pokemon!</string>
    <string name="catch_pokemon_button1">Button 1</string>
    <string name="catch_pokemon_button2">Button 2</string>
    <string name="catch_pokemon_button3">Button 3</string>
    <string name="catch_pokemon_button4">Button 4</string>
    <string name="catch_pokemon_button5">Button 5</string>
    <string name="catch_pokemon_button6">Button 6</string>
    <string name="catch_pokemon_button7">Button 7</string>
    <string name="catch_pokemon_button8">Button 8</string>
    <string name="catch_pokemon_button9">Button 9</string>
    <string name="catch_pokemon_input">_</string>
    <string name="catch_pokemon_enter_button">Enter Button</string>
    <string name="catch_pokemon_clear_button">Clear Button</string>
    <string name="catch_pokemon_wrong_answer">Wrong Code- 2 more attempts!</string>
    <string name="catch_pokemon_home_button_description">Go to home screen.</string>
    <!--- Instructions -->
    <string name="instrutions_1">1.) Find Pokeballs and Remember the Code</string>
    <string name="instructions_home_button_description">Go to home screen.</string>
    <string name="instructions_title">INSTRUCTIONS</string>
    <!--- Pokemon -->
    <string name="pokemon_title">POKEMON</string>
    <string name="pokemon_user">BARNEY</string>
    <string name="pokemon_string1">YOU CAUGHT A...</string>
    <string name="pokemon_pokemon">CHARIZARD</string>
    <string name="pokemon_caught_description">This is the pokemon that was caught.</string>
    <string name="pokemon_home_button_description">Go to home screen.</string>
</resources>