<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/main_button_new_text"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_title_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pokemon_blue"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_mulverna_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/main_mulverna_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/pokemon_yellow"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/main_pokemon_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:contentDescription="@string/main_title_cd"
                app:srcCompat="@drawable/main_pokemon_title" />

            <TextView
                android:id="@+id/main_hunt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/main_hunt_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/pokemon_yellow"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/main_pokemon_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_title_header"
            android:adjustViewBounds="true"
            android:background="@color/pokemon_blue"
            android:contentDescription="@string/main_characters_cd"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/main_pokemon_characters" />

        <LinearLayout
            android:id="@+id/main_button_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_pokemon_characters"
            android:layout_alignParentBottom="true"
            android:background="@color/pokemon_blue"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/main_button_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@color/pokemon_blue"
                android:contentDescription="@string/main_button_new_text"
                android:scaleType="fitXY"
                android:scaleX=".9"
                android:scaleY=".9"
                app:srcCompat="@drawable/new_button" />

            <ImageButton
                android:id="@+id/main_button_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@color/pokemon_blue"
                android:contentDescription="@string/main_button_resume_text"
                android:scaleType="fitXY"
                android:scaleX=".9"
                android:scaleY=".9"
                app:srcCompat="@drawable/resume_button" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>