<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/catch_pokemon_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pokemon_blue"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/catch_pokemon_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_centerVertical="false"
            android:background="@color/pokemon_yellow"
            android:gravity="center"
            android:text="@string/catch_pokemon_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/pokemon_dark_blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/catch_pokemon_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/catch_pokemon_header"
            android:layout_centerInParent="false"
            android:layout_centerVertical="false"
            android:gravity="center"
            android:text="@string/catch_pokemon_instructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/pokemon_yellow"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/catch_pokemon_inputs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/catch_pokemon_instructions"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/catch_pokemon_input1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/catch_pokemon_margin"
                android:layout_marginEnd="@dimen/catch_pokemon_margin"
                android:text="@string/catch_pokemon_input"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textColor="@color/pokemon_yellow"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/catch_pokemon_input2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/catch_pokemon_margin"
                android:layout_marginEnd="@dimen/catch_pokemon_margin"
                android:layout_weight="1"
                android:text="@string/catch_pokemon_input"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textColor="@color/pokemon_yellow"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/catch_pokemon_input3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/catch_pokemon_margin"
                android:layout_marginEnd="@dimen/catch_pokemon_margin"
                android:layout_weight="1"
                android:text="@string/catch_pokemon_input"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textColor="@color/pokemon_yellow"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/catch_pokemon_input4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/catch_pokemon_margin"
                android:layout_marginEnd="@dimen/catch_pokemon_margin"
                android:layout_weight="1"
                android:text="@string/catch_pokemon_input"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textColor="@color/pokemon_yellow"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/catch_pokemon_input5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/catch_pokemon_margin"
                android:layout_marginEnd="@dimen/catch_pokemon_margin"
                android:layout_weight="1"
                android:text="@string/catch_pokemon_input"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textColor="@color/pokemon_yellow"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/catch_pokemon_wrong_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/catch_pokemon_inputs"
            android:background="@color/pokemon_dark_blue"
            android:gravity="center"
            android:text="@string/catch_pokemon_wrong_answer"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/catch_pokemon_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/catch_pokemon_wrong_answers"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:background="@color/pokemon_dark_blue"
            android:gravity="center">

            <ImageButton
                android:id="@+id/catch_pokemon_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/catch_pokemon_btn5"
                android:layout_alignStart="@id/catch_pokemon_btn4"
                android:background="@color/pokemon_dark_blue"
                android:contentDescription="@string/catch_pokemon_button1"
                app:srcCompat="@drawable/unknown_button_a" />

            <ImageButton
                android:id="@+id/catch_pokemon_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/catch_pokemon_btn5"
                android:layout_toEndOf="@id/catch_pokemon_btn1"
                android:background="@color/pokemon_dark_blue"
                android:contentDescription="@string/catch_pokemon_button2"
                app:srcCompat="@drawable/unknown_button_f" />

            <ImageButton
                android:id="@+id/catch_pokemon_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/catch_pokemon_btn5"
                android:layout_toEndOf="@id/catch_pokemon_btn2"
                android:background="@color/pokemon_dark_blue"
                android:contentDescription="@string/catch_pokemon_button3"
                app:srcCompat="@drawable/unknown_button_o" />

            <ImageButton
                android:id="@+id/catch_pokemon_btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/catch_pokemon_btn5"
                android:layout_marginBottom="@dimen/catch_pokemon_margin"
                android:layout_toStartOf="@id/catch_pokemon_btn5"
                android:background="@color/pokemon_dark_blue"
                android:contentDescription="@string/catch_pokemon_button4"
                app:srcCompat="@drawable/unknown_button_i" />

            <ImageButton
                android:id="@+id/catch_pokemon_btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/pokemon_dark_blue"
                android:contentDescription="@string/catch_pokemon_button5"
                app:srcCompat="@drawable/unknown_button_m" />

            <ImageButton
                android:id="@+id/catch_pokemon_btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/catch_pokemon_btn1"
                android:layout_alignTop="@id/catch_pokemon_btn5"
                android:layout_marginBottom="@dimen/catch_pokemon_margin"
                android:layout_toEndOf="@id/catch_pokemon_btn5"
                android:background="@color/pokemon_dark_blue"
                android:contentDescription="@string/catch_pokemon_button6"
                app:srcCompat="@drawable/unknown_button_e" />

            <ImageButton
                android:id="@+id/catch_pokemon_btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/catch_pokemon_btn5"
                android:layout_alignStart="@id/catch_pokemon_btn4"
                android:background="@color/pokemon_dark_blue"
                android:contentDescription="@string/catch_pokemon_button7"
                app:srcCompat="@drawable/unknown_button_b" />

            <ImageButton
                android:id="@+id/catch_pokemon_btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/catch_pokemon_btn5"
                android:layout_centerInParent="false"
                android:layout_toEndOf="@id/catch_pokemon_btn7"
                android:background="@color/pokemon_dark_blue"
                android:contentDescription="@string/catch_pokemon_button8"
                app:srcCompat="@drawable/unknown_button_r" />

            <ImageButton
                android:id="@+id/catch_pokemon_btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/catch_pokemon_btn5"
                android:layout_toEndOf="@id/catch_pokemon_btn8"
                android:background="@color/pokemon_dark_blue"
                android:contentDescription="@string/catch_pokemon_button8"
                app:srcCompat="@drawable/unknown_button_z" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/catch_pokemon_btn7"
                android:layout_marginTop="@dimen/catch_pokemon_margin"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/catch_pokemon_enter_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/pokemon_dark_blue"
                    android:contentDescription="@string/catch_pokemon_enter_button"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/enter_button" />

                <ImageButton
                    android:id="@+id/catch_pokemon_home_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/pokemon_dark_blue"
                    android:contentDescription="@string/catch_pokemon_home_button_description"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/home_button_v2" />

                <ImageButton
                    android:id="@+id/catch_pokemon_clear_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/pokemon_dark_blue"
                    android:contentDescription="@string/catch_pokemon_clear_button"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/clear_button" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>