<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResumeUserActivity">

    <LinearLayout
        android:id="@+id/resume_user_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pokemon_dark_blue"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/resume_user_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="false"
            android:background="@color/pokemon_yellow"
            android:gravity="center"
            android:text="@string/resume_user_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/pokemon_dark_blue"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/resume_user_home_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pokemon_dark_blue"
            android:contentDescription="@string/resume_user_home_button_description"
            app:srcCompat="@drawable/home_button_v2" />

        <TextView
            android:id="@+id/resume_user_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resume_user_instruction"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/pokemon_yellow" />

        <ListView
            android:id="@+id/resume_user_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/catch_pokemon_margin" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>